# cpp_imgui_starter_app

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  justfile
src/: app.cpp  app.hpp  main.cpp
